--- a/client/index.html
+++ b/client/index.html
@@ -1,3 +1,3 @@
 <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/zepto/1.0/zepto.min.js"></script>
 <script src="http://cdnjs.cloudflare.com/ajax/libs/socket.io/0.9.6/socket.io.min.js"></script>
-<script src="index.js"></script>
+<script src="phosphorus.min.js"></script>
